# gamble

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  start.sh  stop.sh
.agents/rules/: global.md
.agents/workflows/: browser_usage.md  finish_task.md  run_bot.md
config/: gto_tables.yaml  gto_training.yaml  preflop_ranges.yaml  settings.yaml
docs/: architecture.md  auto_mode_plan.md  available_actions_fix.md  browser_interface_guide.md  changelog.md  cli_commands_explanation.md  cli_dual_channel_architecture.md  design_doc.md  gto_pipeline.md  hud_plan.md  implementation_plan.md  improvement_analysis.md  my_turn_fix.md  opponent_analysis_plan.md  platform_browser_refactor.md  replaypoker_selector_fix.md  roadmap.md  sit_out_fix.md  state_fix_summary.md  win_rate_plan.md
docs/architecture/: README.md  arena.md  browser-platform.md  ring-game.md  strategy-engine.md
docs/changelog/: README.md  fixes.md
docs/development/: README.md  browser-development.md  testing.md
docs/guide/: README.md  browser-mode.md  cli-reference.md  mtt-sng.md  ring-game.md
scripts/: replay_hand.py  train_arena_dqn.py  train_gto_cfr.py  train_nlh_model.py
src/: __init__.py  design_doc.md  main.py  main_browser.py  poker_client.py.bak
src/arena/: agent.py  arena.md  competition.py  game.py
src/bot/: DESIGN.md  browser_manager.py  lifecycle_manager.py  lobby_manager.py  play_manager.py  poker_client.py  utils.py  (+2 more)
tests/: TESTING.md  TESTING_IMPROVEMENTS.md  __init__.py  reproduce_equity_error.py  test_decision_regression.py  test_equity.py  test_strategy_improvement.md  tests.md
(+167 files in other folders)
