[project]
name = "gamble"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0.3",
    "rich>=14.3.2",
    "treys>=0.1.8",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "integration: 需要真实浏览器和网络的端到端集成测试（用 pytest -m integration 运行）",
]
